# gidit-clone

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: Info.plist.in
resources/: gidit.desktop  gidit.qrc
scripts/: build.ps1  build.sh
src/: main.cpp
src/ai/: AgentEngine.cpp  AgentEngine.h
src/app/: App.cpp  App.h  Settings.cpp  Settings.h
src/services/: Database.cpp  Database.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/autopilot/: AutopilotView.cpp  AutopilotView.h  ChatBar.cpp  ChatBar.h  FaceSidebar.cpp  FaceSidebar.h
src/ui/dashboard/: DashboardView.cpp  DashboardView.h  WidgetGrid.cpp  WidgetGrid.h
src/ui/dashboard/widgets/: BaseWidget.cpp  BaseWidget.h  HealthWidget.cpp  HealthWidget.h  QuadrantWidget.cpp  QuadrantWidget.h  StatsWidget.cpp  StatsWidget.h  StickyNotesWidget.cpp  StickyNotesWidget.h  StreaksWidget.cpp  StreaksWidget.h  TimeBlockWidget.cpp  TimeBlockWidget.h  TodoWidget.cpp  TodoWidget.h
src/ui/face/: EmotionEngine.cpp  EmotionEngine.h  FaceCanvas.cpp  FaceCanvas.h
src/ui/panel/: AIPanel.cpp  AIPanel.h  ChatWidget.cpp  ChatWidget.h
src/ui/sidebar/: BuilderPalette.cpp  BuilderPalette.h  Sidebar.cpp  Sidebar.h
src/utils/: Theme.cpp  Theme.h
